# ZZGit

./: README
UDE/: CMakeLists.txt  build.bat  linuxDebugBuild.sh  linuxReleaseBuild.sh
UDE/UDE/: CMakeLists.txt
UDE/UDE/src/: MainWindow.cpp  MainWindow.hxx  UDE.cpp  UDE.qrc
